--- a/OnlineShopping.Domain/OnlineShopping.Domain.csproj
+++ b/OnlineShopping.Domain/OnlineShopping.Domain.csproj
@@ -57,22 +57,22 @@
     <Compile Include="Abstract\IManufacturerRepository.cs" />
     <Compile Include="Abstract\IOrderProcessor.cs" />
     <Compile Include="Abstract\IProductRepository.cs" />
-    <Compile Include="Abstract\ITransactionDetailRepository.cs" />
-    <Compile Include="Abstract\ITransactionRespository.cs" />
+    <Compile Include="Abstract\IOnlineTransactionDetailRepository.cs" />
+    <Compile Include="Abstract\IOnlineTransactionRespository.cs" />
     <Compile Include="Concrete\EFCategoryRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFManufacturerRepository.cs" />
     <Compile Include="Concrete\EFProductRepository.cs" />
-    <Compile Include="Concrete\EFTransactionDetailRepository.cs" />
-    <Compile Include="Concrete\EFTransactionRepository.cs" />
+    <Compile Include="Concrete\EFOnlineTransactionDetailRepository.cs" />
+    <Compile Include="Concrete\EFOnlineTransactionRepository.cs" />
     <Compile Include="Concrete\EmailOrderProcessor.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Manufacturer.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ShippingDetails.cs" />
-    <Compile Include="Entities\Transaction.cs" />
-    <Compile Include="Entities\TransactionDetail.cs" />
+    <Compile Include="Entities\OnlineTransaction.cs" />
+    <Compile Include="Entities\OnlineTransactionDetail.cs" />
     <Compile Include="Migrations\201311301535215_transaction_added.cs" />
     <Compile Include="Migrations\201311301535215_transaction_added.Designer.cs">
       <DependentUpon>201311301535215_transaction_added.cs</DependentUpon>
