--- a/OnlineShopping.WebUI/Web.config
+++ b/OnlineShopping.WebUI/Web.config
@@ -79,7 +79,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=mh9t5t5kuc.database.windows.net;Initial Catalog=onlineshop;User ID=cg3002;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=mh9t5t5kuc.database.windows.net;Initial Catalog=CustomerDB;User ID=cg3002;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=drxcttkv1z.database.windows.net;Initial Catalog=pizzahqAFTNCgmz2;User ID=abhshkrv;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=drxcttkv1z.database.windows.net;Initial Catalog=pizzaHQ-MembersDB;User ID=abhshkrv;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
