--- a/OnlineShopping.WebUI/Web.config
+++ b/OnlineShopping.WebUI/Web.config
@@ -79,7 +79,16 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=drxcttkv1z.database.windows.net;Initial Catalog=pizzahqAFTNCgmz2;User ID=abhshkrv;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=drxcttkv1z.database.windows.net;Initial Catalog=pizzaHQ-MembersDB;User ID=abhshkrv;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=n4g5adgn9l.database.windows.net;Initial Catalog=hqserver;User ID=cg3002;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=n4g5adgn9l.database.windows.net;Initial Catalog=HQ-MembersDB;User ID=cg3002;Password=123Cdn456;Encrypt=true;Trusted_Connection=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="no-reply@pizza.com">
+        <network host="smtp.gmail.com" defaultCredentials="false" port="587" enableSsl="true" userName="cg3002noreply@gmail.com" password="123Cdn456"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
+
