--- a/OnlineShopping.WebUI/packages.config
+++ b/OnlineShopping.WebUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ActionMailer" version="0.7.4" targetFramework="net40" />
   <package id="bootstrap" version="3.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.AspNet.WebPages" version="1.0.20105.408" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
 </packages>
