--- a/OnlineShopping.Domain/OnlineShopping.Domain.csproj
+++ b/OnlineShopping.Domain/OnlineShopping.Domain.csproj
@@ -55,18 +55,24 @@
   <ItemGroup>
     <Compile Include="Abstract\ICategoryRepository.cs" />
     <Compile Include="Abstract\IManufacturerRepository.cs" />
+    <Compile Include="Abstract\IOutletInventoryRepository.cs" />
+    <Compile Include="Abstract\IOutletRepository.cs" />
     <Compile Include="Abstract\IProductRepository.cs" />
     <Compile Include="Abstract\IOnlineTransactionDetailRepository.cs" />
     <Compile Include="Abstract\IOnlineTransactionRespository.cs" />
     <Compile Include="Concrete\EFCategoryRepository.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFManufacturerRepository.cs" />
+    <Compile Include="Concrete\EFOutletInventoryRepository.cs" />
+    <Compile Include="Concrete\EFOutletRepository.cs" />
     <Compile Include="Concrete\EFProductRepository.cs" />
     <Compile Include="Concrete\EFOnlineTransactionDetailRepository.cs" />
     <Compile Include="Concrete\EFOnlineTransactionRepository.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Manufacturer.cs" />
+    <Compile Include="Entities\Outlet.cs" />
+    <Compile Include="Entities\OutletInventory.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ShippingDetails.cs" />
     <Compile Include="Entities\OnlineTransaction.cs" />
